# astroemu

./: .gitignore  .pre-commit-config.yaml  IMRPhenomDPlan.md  IMRPhenomD_data_gen.py  LICENSE  README.md  fsps-data-gen.py  fsps-plan.md  mkdocs.yaml  pyproject.toml  test-network.py
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yaml  lint.yaml
astroemu/: dataloaders.py  losses.py  network.py  normalisation.py  serialisation.py  train.py  utils.py
docs/: api-reference.md  tutorial.md
emu/: __init__.py  dataloaders.py  download.py  network.py  normalisation.py  utils.py
tests/: test_dataloaders.py  test_loss.py  test_normalisation.py  test_serialisation.py  test_training.py
tests/example_data/: README.md  sample_000000.npz  sample_000001.npz  sample_000002.npz  sample_000003.npz  sample_000004.npz  sample_000005.npz  sample_000006.npz  sample_000007.npz  sample_000008.npz  sample_000009.npz  sample_000010.npz  sample_000011.npz  sample_000012.npz  sample_000013.npz  sample_000014.npz  sample_000015.npz  sample_000016.npz  sample_000017.npz  sample_000018.npz  sample_000019.npz  sample_000020.npz  sample_000021.npz  sample_000022.npz  sample_000023.npz  sample_000024.npz  sample_000025.npz  sample_000026.npz  sample_000027.npz  sample_000028.npz  sample_000029.npz  sample_000030.npz  sample_000031.npz  sample_000032.npz  sample_000033.npz  sample_000034.npz  sample_000035.npz  sample_000036.npz  sample_000037.npz  sample_000038.npz  (+61 more)
