[project]
name = "astroemu"
version = "0.1.2"
description = "Generalised framework for emulating spectral signals."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jax",
    "jaxlib",
    "torch",
]

[build-system]
requires = ["setuptools>=77.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["astroemu*"]

[project.optional-dependencies]
dev = [
    "ruff",
    "pre-commit",
]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select =["E", "F", "W",  # basics
            "I",            # isort
            "D",            # docstrings
            "UP",           # pyupgrade (includes type modernization)
            "ANN",          # type annotations
            ]

[tool.ruff.lint.pydocstyle]
convention = "google"